Fix forge122 build: replace Java 9+ Set.of with Java 8 construction
forge122 compiles with --release 8, so Java 9+ library APIs are unavailable even
though Jabel enables modern syntax. ShaderPackLoader used Set.of(...), which
failed with 'cannot find symbol'. Replace with
Collections.unmodifiableSet(new HashSet<>(Arrays.asList(...))).

Also correct the package-info and IRIS_PORT_SPEC notes that wrongly implied
.toList()/Set.of are usable in forge122 — only modern syntax is, not Java 9+
library APIs (the downgraded common module is the exception).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>